Changed menu wrap's position back to fixed as this stop the horizontal scrolling, but now vertical scrolling doesn't work...

--- a/src/components/Contentful/sass/components/_contentful_mobile_menu.scss
+++ b/src/components/Contentful/sass/components/_contentful_mobile_menu.scss
@@ -38,7 +38,7 @@
   Note: Beware of modifying this element as it can break the animations - you should not need to touch it in most cases
   */
   .bm-menu-wrap {
-    position: absolute !important;
+    position: fixed;
     height: auto !important;
     background: $white;
   }
@@ -81,6 +81,6 @@
   
   /* Styling of overlay */
   .bm-overlay {
-    background: rgba(0, 0, 0, 0.3);
+    background: rgba(0, 0, 0, 1);
   }
 }
